--- a/Prueba/Views/Home/Index.cshtml
+++ b/Prueba/Views/Home/Index.cshtml
@@ -1,8 +1,92 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    Layout = null;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iniciar sesión</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <script src="https://kit.fontawesome.com/9de2bfac06.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="~/css/login.css">
+</head>
+
+<body>
+    <section class="ftco-section">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-10">
+                    <div class="wrap d-md-flex">
+                        <div class="img text-center img-logo-container">
+                            <img src="~/img/logo.png" alt="" >
+                            <h2 class="title-logo">IGRTEC</h2>
+                        </div>
+                        <div class="login-wrap p-4 p-md-5">
+                            <div class="d-flex">
+                                <div class="w-100">
+                                    <h3 class="mb-4 text-center">Inicia sesión</h3>
+                                </div>
+                            </div>
+                            <form method="" class="login-form" id="form-login">
+                                
+                                <div class="form-group mb-3">
+                                    <label class="label" for="correo">Correo</label>
+                                    <input type="text" class="form-control" placeholder="usuario@example.com" name="" required>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label class="label" for="pwd">Contraseña</label>
+                                    <input type="password" class="form-control" placeholder="*********" required id="pwd" name="">
+                                    <span class="toggle-password" onclick="togglePasswordVisibility()"><i class="fas fa-eye"></i></span>
+                                    <span class="clear-password" onclick="clearPassword()"><i class="fa fa-times"></i></span>
+                                </div>
+
+                                <div class="mt-3">
+                                    <button class="form-control btn-login" type="">INICIAR SESIÓN</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script>
+        function togglePasswordVisibility() {
+            var passwordField = document.getElementById("pwd");
+            var togglePassword = document.querySelector(".toggle-password i");
+
+            if (passwordField.type === "password") {
+                passwordField.type = "text";
+                togglePassword.classList.remove("fa-eye");
+                togglePassword.classList.add("fa-eye-slash");
+            } else {
+                passwordField.type = "password";
+                togglePassword.classList.remove("fa-eye-slash");
+                togglePassword.classList.add("fa-eye");
+            }
+        }
+
+        function clearPassword() {
+            var passwordInput = document.getElementById('pwd');
+            passwordInput.value = '';
+            toggleClearPasswordVisibility();
+        }
+
+        function toggleClearPasswordVisibility() {
+            var passwordInput = document.getElementById('pwd');
+            var clearPasswordButton = document.querySelector('.clear-password');
+            clearPasswordButton.style.display = passwordInput.value.length > 0 ? 'block' : 'none';
+        }
+
+        // Agrega un event listener para detectar cambios en el campo de contraseña
+        document.getElementById('pwd').addEventListener('input', toggleClearPasswordVisibility);
+    </script>
+</body>
+
+</html>
